# notelist

./: .gitignore  Dockerfile  LICENSE  README.md  changelog.txt  docker-compose.yml  pyproject.toml  requirements.txt  requirements_dev.txt  setup.py
.devcontainer/: Dockerfile  devcontainer.json  docker-compose.yml
src/: app.py  configure.py  run.py
src/notelist/: __init__.py  __main__.py  apis.py  app.py  config.py  main.py  manage.py  tools.py
src/notelist/authentication/: tests.py  urls.py  views.py
src/notelist/core/: __init__.py  admin.py  models.py  tests.py
src/notelist/core/management/: __init__.py
src/notelist/core/management/commands/: __init__.py  wait_for_db.py
src/notelist/core/migrations/: 0001_initial.py  __init__.py
src/notelist/migrations/versions/: bae76fabda65_v1.py  fefcb2f53409_v1.py
src/notelist/models/: __init__.py  notebooks.py  notes.py  tags.py  users.py
src/notelist/notelist/: __init__.py  asgi.py  settings.py  urls.py  wsgi.py
src/notelist/resources/: __init__.py  notebooks.py  notes.py  search.py  tags.py  users.py
src/notelist/schemas/: note.py  notebooks.py  notes.py  tags.py  users.py
src/notelist/templates/: home.html
test/: common.py  paths.py  test_about.py  test_app.py  test_notebooks.py  test_notes.py  test_tags.py  test_users.py
